inicio de sesion
terminada la interfaz grafica del inicio de sesion no es funcional

--- a/sesion.html
+++ b/sesion.html
@@ -16,12 +16,11 @@
                 Nombre de usuario
             </label>
         </div>
-        <div class="contraseña">
+        <div class="username">
             <input type="password" required>
             <label>contraseña</label>
         </div>
-        <div class="recordar"> Olvido su contraseña?
-        </div>
+        <div class="recordar"> Olvido su contraseña?</div>
         <input type="submit" value="Iniciar">
         <div class="registrarse">
             quiero hacer el <a href="#">registro</a>
