MUCHOS CAMBIOS XD
cambios en los carruseles y un mensaje encima lol

--- a/sesion.html
+++ b/sesion.html
@@ -7,8 +7,13 @@
     <title>inicio de sesion</title>
 </head>
 <body>
+    <div class="fondo">
+        <img src="/img/makima.png" alt="">
+        <img src="/img/power.png" alt="">
+
+    </div>
   <div class="formulario">
-    <h1>Inicio de sesión</h1> 
+    <h1>Inicio de Sesion SIGMA</h1> 
     <form method="post">
         <div class="username">
             <input type="text" required>
