--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <nav class="navbar bg-body-tertiary">
   <div class="container">
     <p class=" tamañoletra ">hola mijo aqui tiene ofertas :v</p>
-    
   </div>
 </nav>
     <nav class="navbar colornav navbar-expand-lg bg-body-tertiary opacity-20 "data-bs-theme="dark">
@@ -276,10 +275,9 @@
       
       <!-- Columna 1 -->
       <div class="col-md-4 mb-3">
-        <h5>Mi Sitio</h5>
+        <h5>Sobre Crimewave</h5>
         <p>
-          Descripción breve de tu página o empresa.  
-          Puedes poner dirección o un pequeño texto aquí.
+          Crimewave es un sitio de venta de ropa estilo anime-streetwear y alternativa con diseños originales hechas por ferguinx. 
         </p>
       </div>
 
@@ -298,7 +296,7 @@
       <div class="col-md-4 mb-3">
         <h5>Síguenos</h5>
         <a href="#" class="text-light me-3"><i class="bi bi-facebook fs-4"></i></a>
-        <a href="#" class="text-light me-3"><i class="bi bi-instagram fs-4"></i></a>
+        <a href="https://www.instagram.com/crimewave.store/?hl=es" class="text-light me-3"><i class="bi bi-instagram fs-4"></i></a>
         <a href="#" class="text-light me-3"><i class="bi bi-twitter fs-4"></i></a>
         <a href="#" class="text-light"><i class="bi bi-linkedin fs-4"></i></a>
       </div>
@@ -310,8 +308,6 @@
     </div>
   </div>
 </footer>
-
-
     <script src="bootstrap-5.3.8-dist/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
 </body>
