--- a/productos.html
+++ b/productos.html
@@ -234,6 +234,45 @@
         </div>
     </div>
 
+    <footer class="footer bg-dark text-light pt-4">
+  <div class="container">
+    <div class="row">
+      
+      <!-- Columna 1 -->
+      <div class="col-md-4 mb-3">
+        <h5>Sobre Crimewave</h5>
+        <p>
+          Crimewave es un sitio de venta de ropa estilo anime-streetwear y alternativa con diseños originales hechas por ferguinx. 
+        </p>
+      </div>
+
+      <!-- Columna 2 -->
+      <div class="col-md-4 mb-3">
+        <h5>Enlaces útiles</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-light text-decoration-none">Inicio</a></li>
+          <li><a href="#" class="text-light text-decoration-none">Servicios</a></li>
+          <li><a href="#" class="text-light text-decoration-none">Acerca de</a></li>
+          <li><a href="#" class="text-light text-decoration-none">Contacto</a></li>
+        </ul>
+      </div>
+
+      <!-- Columna 3 -->
+      <div class="col-md-4 mb-3">
+        <h5>Síguenos</h5>
+        <a href="#" class="text-light me-3"><i class="bi bi-facebook fs-4"></i></a>
+        <a href="https://www.instagram.com/crimewave.store/?hl=es" class="text-light me-3"><i class="bi bi-instagram fs-4"></i></a>
+        <a href="#" class="text-light me-3"><i class="bi bi-twitter fs-4"></i></a>
+        <a href="#" class="text-light"><i class="bi bi-linkedin fs-4"></i></a>
+      </div>
+
+    </div>
+
+    <div class="text-center mt-3 border-top pt-3">
+      <p class="mb-0">&copy; 2025 Mi Sitio. Todos los derechos reservados.</p>
+    </div>
+  </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
     <script src="script.js"></script>
