--- a/adminpagina.html
+++ b/adminpagina.html
@@ -31,13 +31,13 @@
         <div class="tab-pane fade" id="agregarProducto" role="tabpanel">
         </div>
         <div class="tab-pane fade" id="pedidos" role="tabpanel">
-          <p>Consulta y administra los pedidos en curso.</p>
+          <p>el trabajo ta en progris !!</p>
         </div>
         <div class="tab-pane fade" id="historial" role="tabpanel">
-          <p>Revisa el historial de todos los pedidos completados.</p>
+          <p>el trabajo ta en progris !!</p>
         </div>
         <div class="tab-pane fade" id="devoluciones" role="tabpanel">
-          <p>Administra y registra devoluciones de productos.</p>
+          <p>el trabajo ta en progris !!</p>
         </div>
       </div>
     </div>
