--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       
     </a>
       <form class="d-flex" role="search" >
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-white" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="buscar" aria-label="Search"/>
+        <button class="btn btn-outline-white" type="submit">buscar</button>
       </form>
       <a href="sesion.html"><button class="btn-ini" >Iniciar Sesión</button></a>
     </div>
