--- a/index.html
+++ b/index.html
@@ -26,24 +26,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cuadros</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="True">
-            Productos
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+          <a class="nav-link" href="cuadros.html">Cuadros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " aria-disabled="true">Sobre nosotros</a>
+          <a class="nav-link" href="productos.html">Productos</a>
+        </li>
+        
+        <li class="nav-item">
+          <a class="nav-link " aria-disabled="disable">Sobre nosotros</a>
         </li>
       </ul>
       <a class="navbar-brand" href="#">
@@ -147,6 +140,7 @@
   <img src=" img/photo-1706977470443-e71503f38c1d.avif" alt="" >
 </div>
 
+
 <div class="contenedor">
   <div class="col">
     <img src=" img/neg1.avif" alt="Imagen 1" class="imagengrande">
@@ -227,6 +221,10 @@
     <button class="btn next">❯</button>
   </div>
 
+<div class="imagenweb img-fluid padin">
+  <img src=" img/photo-1706977470443-e71503f38c1d.avif" alt="" >
+</div>
+
 <!--- PRUEBA INSANA-->
 <section class="shop-feed">
   <h2 class="titulo">----------- SHOP THE FEED -----------</h2>
@@ -234,13 +232,11 @@
     <button class="btn prev-video">❮</button>
     <div class="slider-wrapper">
       <div class="slider" id="video-slider">
-        <div class="video-slide"><video src="img/denji y power bailando.mp4" autoplay muted loop></video></div>
         <div class="video-slide"><video src="img/Zero Two dance tiktok clip.mp4" autoplay muted loop></video></div>
-        <div class="video-slide"><video src="img/denji y power bailando.mp4" autoplay muted loop></video></div>
-        <div class="video-slide"><video src="img/denji y power bailando.mp4" autoplay muted loop></video></div>
-        <div class="video-slide"><video src="img/denji y power bailando.mp4" autoplay muted loop></video></div>
-        <div class="video-slide"><video src="img/denji y power bailando.mp4" autoplay muted loop></video></div>
-        <div class="video-slide"><video src="img/denji y power bailando.mp4" autoplay muted loop></video></div>
+        <div class="video-slide"><video src="img/gorras.mp4" autoplay muted loop></video></div>
+        <div class="video-slide"><video src="img/video2.mp4" autoplay muted loop></video></div>
+        <div class="video-slide"><video src="img/video3.mp4" autoplay muted loop></video></div>
+        <div class="video-slide"><video src="img/video4.mp4" autoplay muted loop></video></div>
       </div>
     </div>
     <button class="btn next-video">❯</button>
