--- a/productos.html
+++ b/productos.html
@@ -13,12 +13,7 @@
 </head>
 <body>
 
-    <nav class="navbar bg-body-tertiary">
-  <div class="container">
-    <p class=" tamañoletra ">hola mijo aqui tiene ofertas :v</p>
-    
-  </div>
-</nav>
+   </nav>
     <nav class="navbar colornav navbar-expand-lg bg-body-tertiary opacity-20 "data-bs-theme="dark">
   <div class="container-fluid " >
     <a href="index.html"> <img src="img/LOGODEF (2).png" alt="Bootstrap" width="160" height="80" class="logo"></a>
@@ -29,22 +24,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cuadros</a>
+          <a class="nav-link" href="cuadros.html">Cuadros</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="True">
-            Productos
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="productos.html">Productos</a>
         </li>
+        
         <li class="nav-item">
           <a class="nav-link " aria-disabled="true">Sobre nosotros</a>
         </li>
@@ -60,6 +48,7 @@
     </div>
   </div>
 </nav>
+
     <div class="container mt-5 mb-5">
         <div class="row">
 
