--- a/sesion.html
+++ b/sesion.html
@@ -9,11 +9,10 @@
 <script src="app.js" defer></script>
 <body>
     <div class="fondo">
-        <img src="img\makima.png" alt="">
-        <img src="img\power.png" alt="">
+       <a href="index.html"><img src="img\makima.png" alt=""></a>
+      <a href="index.html"><img src="img\power.png" alt=""></a>
 
     </div>
-<p>xd</p>
 
   <div class="formulario">
     <h1>Inicio de Sesion SIGMA</h1> 
