--- a/adminpagina.html
+++ b/adminpagina.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Panel de Administrador</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="bootstrap-5.3.8-dist/css/bootstrap.min.css">
@@ -28,21 +28,24 @@
           <h1>Bienvenido, Admin 🎉</h1>
           <p>Selecciona una opción en el menú lateral.</p>
         </div>
+
         <div class="tab-pane fade" id="agregarProducto" role="tabpanel">
         </div>
+
         <div class="tab-pane fade" id="pedidos" role="tabpanel">
           <p>el trabajo ta en progris !!</p>
         </div>
+
         <div class="tab-pane fade" id="historial" role="tabpanel">
           <p>el trabajo ta en progris !!</p>
         </div>
+
         <div class="tab-pane fade" id="devoluciones" role="tabpanel">
           <p>el trabajo ta en progris !!</p>
         </div>
       </div>
     </div>
   </div>
-
 
   <script src="bootstrap-5.3.8-dist/js/bootstrap.min.js"></script>
   <script src="scriptsadmin.js"></script>
