--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   </div>
 
 <div class="imagenweb img-fluid padin">
-  <img src=" img/photo-1706977470443-e71503f38c1d.avif" alt="" >
+  <img src="img/BANNER_18_DE_SEPTIEBRE_2025.webp" alt="" >
 </div>
 
 <!--- PRUEBA INSANA-->
@@ -232,7 +232,7 @@
     <button class="btn prev-video">❮</button>
     <div class="slider-wrapper">
       <div class="slider" id="video-slider">
-        <div class="video-slide"><video src="img/Zero Two dance tiktok clip.mp4" autoplay muted loop></video></div>
+       
         <div class="video-slide"><video src="img/gorras.mp4" autoplay muted loop></video></div>
         <div class="video-slide"><video src="img/video2.mp4" autoplay muted loop></video></div>
         <div class="video-slide"><video src="img/video3.mp4" autoplay muted loop></video></div>
