--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link " aria-disabled="disable">Sobre nosotros</a>
+          <a class="nav-link " href="https://www.instagram.com/crimewave.store/?hl=es">Sobre nosotros</a>
         </li>
       </ul>
       <a class="navbar-brand" href="#">
@@ -80,10 +80,10 @@
     <button class="btn prev">❮</button>
     <div class="slider">
       <div class="card">
-        <img src="img/araña.png" alt="Producto 1">
+       <a href="productos.html"> <img src="img/araña.png" alt="Producto 1"></a>
         <div class="card-info">
           <h3 >Diseños</h3>
-          <button>COMPRA AHORA</button>
+           <a href="productos.html"> <button>COMPRA AHORA</button></a>
         </div>
       </div>
      
@@ -91,14 +91,14 @@
         <img src="img/ORIGINAL 2.png" alt="Producto 2">
         <div class="card-info">
           <h3>2 FOR $40 MOCK NECK TEES</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       <div class="card">
         <img src="img/d01dc658-1457-4c3a-86b1-d3c39c63af55.jpg" alt="Producto 3">
         <div class="card-info">
-          <h3>SHIRTS FOR SUMMER</h3>
-          <button>COMPRA AHORA</button>
+          <h3>CUADROS ANIME</h3>
+          <a href="cuadros.html"><button>COMPRA AHORA</button></a>
         </div>
       </div>
        <div class="card">
@@ -147,14 +147,14 @@
     <img src=" img/neg1.avif" alt="Imagen 1" class="imagengrande">
     <div class="texto">
       <h3>NUEVA ERA 'CORAL'</h3>
-      <button>COMPRA AHORA</button>
+      <a href="productos.html"><button>COMPRA AHORA</button></a>
     </div>
   </div>
   <div class="col">
     <img src=" img/rub1.avif" alt="Imagen 2">
     <div class="texto">
       <h3>LOITER "VERANO'</h3>
-      <button>COMPRA AHORA</button>
+     <a href="productos.html"> <button>COMPRA AHORA</button></a>
     </div>
   </div>
 </div>
@@ -171,14 +171,14 @@
         <img src="img/11.png" alt="Producto 2">
         <div class="card-info">
           <h3>2 por $40.000</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html"><button>COMPRA AHORA</button></a>
         </div>
       </div>
       <div class="card">
         <img src="img/22.png" alt="Producto 3">
         <div class="card-info">
           <h3>POLERAS PARA VERANO</h3>
-          <button>COMPRA AHORA</button>
+         <a href="productos.html"><button>COMPRA AHORA</button></a>
         </div>
       </div>
        <div class="card">
@@ -217,7 +217,7 @@
   </div>
 
 <div class="imagenweb img-fluid padin">
-  <img src="img/BANNER_18_DE_SEPTIEBRE_2025.webp" alt="" >
+<a href="productos.html"> <img src="img/BANNER_18_DE_SEPTIEBRE_2025.webp" alt="" ></a> 
 </div>
 
 <!--- PRUEBA INSANA-->
