--- a/cuadros.html
+++ b/cuadros.html
@@ -42,8 +42,8 @@
       
     </a>
       <form class="d-flex" role="search" >
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-white" type="submit">Search</button>
+        <input class="form-control me-2" type="Buscar" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-white" type="submit">Buscar</button>
       </form>
       <a href="sesion.html"><button class="btn-ini" >Iniciar Sesión</button></a>
     </div>
@@ -90,11 +90,11 @@
 
                 <div id="product-grid" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     
-                    <div class="col product-item" data-category="ropa" data-price="24990" data-name="Camiseta Olas">
+                    <div class="col product-item" data-category="ropa" data-price="24990" data-name="given cuadro">
                     <a href="singles2.html" class="product-link">
                         <div class="card h-100 product-card">
                             <span class="badge bg-danger">Oferta</span>
-                            <img src="img/givencuadro.jpg" class="card-img-top" alt="Camiseta Estampada">
+                            <img src="img/givencuadro.jpg" class="card-img-top" alt="Cuadro">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Cuadro Given</h5>
                                 <p class="card-text text-muted mt-auto">
@@ -106,10 +106,10 @@
                         </div>
                     </a>
                      </div>
-                    <div class="col product-item" data-category="ropa" data-price="1990" data-name="Camiseta Olas">
+                    <div class="col product-item" data-category="ropa" data-price="1990" data-name="given">
                         <div class="card h-100 product-card">
                             <span class="badge bg-danger">Oferta</span>
-                            <img src="img/givencuadro.jpg" class="card-img-top" alt="Camiseta Estampada">
+                            <img src="img/givencuadro.jpg" class="card-img-top" alt="Cuadro">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">CUADRO PRUEBA</h5>
                                 <p class="card-text text-muted mt-auto">
