--- a/productos.html
+++ b/productos.html
@@ -41,8 +41,8 @@
       
     </a>
       <form class="d-flex" role="search" >
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-white" type="submit">Search</button>
+        <input class="form-control me-2" type="Buscar" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-white" type="submit">Buscar</button>
       </form>
       <a href="sesion.html"><button class="btn-ini" >Iniciar Sesión</button></a>
     </div>
@@ -89,7 +89,23 @@
 
                 <div id="product-grid" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     
-                    <div class="col product-item" data-category="ropa" data-price="24990" data-name="Camiseta Olas">
+                    <div class="col product-item" data-category="ropa" data-price="24990" data-name="Hoodie satoru">
+                    <a href="single.html?product=camiseta-olas" class="product-link">
+                        <div class="card h-100 product-card">
+                            <span class="badge bg-danger">Oferta</span>
+                            <img src="img/293581278_145413034816483_8475974826237850925_n.jpg" class="card-img-top" alt="hoodie satoru">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Poleron Satoru Gojo</h5>
+                                <p class="card-text text-muted mt-auto">
+                                    <span class="old-price me-2">$2,500</span>
+                                    <span class="new-price">$24,990</span>
+                                </p>
+                                <div class="btn btn-primary w-100 mt-2">Ver detalles</div>
+                            </div>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="col product-item" data-category="ropa" data-price="24990" data-name="Hoodie satoru">
                     <a href="single.html?product=camiseta-olas" class="product-link">
                         <div class="card h-100 product-card">
                             <span class="badge bg-danger">Oferta</span>
@@ -105,23 +121,7 @@
                         </div>
                     </a>
                     </div>
-                    <div class="col product-item" data-category="ropa" data-price="24990" data-name="Camiseta Olas">
-                    <a href="single.html?product=camiseta-olas" class="product-link">
-                        <div class="card h-100 product-card">
-                            <span class="badge bg-danger">Oferta</span>
-                            <img src="img/293581278_145413034816483_8475974826237850925_n.jpg" class="card-img-top" alt="Camiseta Estampada">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Poleron Satoru Gojo</h5>
-                                <p class="card-text text-muted mt-auto">
-                                    <span class="old-price me-2">$2,500</span>
-                                    <span class="new-price">$24,990</span>
-                                </p>
-                                <div class="btn btn-primary w-100 mt-2">Ver detalles</div>
-                            </div>
-                        </div>
-                    </a>
-                    </div>
-                    <div class="col product-item" data-category="ropa" data-price="24990" data-name="Camiseta Olas">
+                    <div class="col product-item" data-category="ropa" data-price="24990" data-name="Hoodie satoru">
                     <a href="single.html?product=camiseta-olas" class="product-link">
                         <div class="card h-100 product-card">
                             <span class="badge bg-danger">Oferta</span>
