--- a/singles2.html
+++ b/singles2.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link">Sobre nosotros</a></li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar"/>
+                    <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar"/>
                     <button class="btn btn-outline-light" type="submit">Buscar</button>
                 </form>
                 <a href="sesion.html"><button class="btn-ini">Iniciar Sesión</button></a>
