pequeños cambios al index
cambie la nav bar para q funcionara y hice q los productos te llevaran a la pgina de productos

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap-5.3.8-dist/css/bootstrap.min.css">
-
     <title>proyectofullstack</title>
 </head>
 <body>
-  <nav class="navbar bg-body-tertiary">
-  <div class="container">
-    <p class=" tamañoletra ">Envios gratis sobre $50.000 </p>
-  </div>
+  <nav class="navbar bg-dark">
+    <div class="container-fluid d-flex justify-content-center">
+      <p class="tamañoletra text-white mb-0">
+        Envíos gratis sobre $50.000
+      </p>
+    </div>
+  </nav>  
 </nav>
     <nav class="navbar colornav navbar-expand-lg bg-body-tertiary opacity-20 "data-bs-theme="dark">
   <div class="container-fluid " >
@@ -105,21 +107,21 @@
         <img src="img/gorro.avif" alt="Producto 4">
         <div class="card-info">
           <h3>PRODUCTOS</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       <div class="card">
         <img src="img/satoru 2.jpg" alt="Producto 4">
         <div class="card-info">
           <h3>PRODUCTOS</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       <div class="card">
         <img src="img/62419863-4d2a-429d-9c26-6e29411812f0.jpg" alt="Producto 4">
         <div class="card-info">
           <h3>PRODUCTOS</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       
@@ -127,7 +129,7 @@
         <img src="img/poleron.avif" alt="Producto 4">
         <div class="card-info">
           <h3>PRODUCTOS</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       
