pequeños cambios al index
ahora todos los botones de productos te llevan a productos

--- a/index.html
+++ b/index.html
@@ -187,21 +187,21 @@
         <img src="img/223.png" alt="Producto 4">
         <div class="card-info">
           <h3>PRODUCTOS</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       <div class="card">
         <img src="img/cuadroanime.png" alt="Producto 4">
         <div class="card-info">
           <h3>PRODUCTOS</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       <div class="card">
         <img src="img/62419863-4d2a-429d-9c26-6e29411812f0.jpg" alt="Producto 4">
         <div class="card-info">
           <h3>PRODUCTOS</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       
@@ -209,7 +209,7 @@
         <img src="img/poleron.avif" alt="Producto 4">
         <div class="card-info">
           <h3>PRODUCTOS</h3>
-          <button>COMPRA AHORA</button>
+          <a href="productos.html">  <button>COMPRA AHORA</button></a>
         </div>
       </div>
       
