--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap-5.3.8-dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+
     <title>proyectofullstack</title>
 </head>
 <body>
