--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <a href="#" class="text-light me-3"><i class="bi bi-facebook fs-4"></i></a>
         <a href="https://www.instagram.com/crimewave.store/?hl=es" class="text-light me-3"><i class="bi bi-instagram fs-4"></i></a>
         <a href="#" class="text-light me-3"><i class="bi bi-twitter fs-4"></i></a>
-        <a href="#" class="text-light"><i class="bi bi-linkedin fs-4"></i></a>
+        <a href="https://github.com/Ferguindc/Proyecto-Desarrollo-Full-Stack-II" class="text-light me-3"><i class="bi bi-github fs-4"></i></a>
       </div>
 
     </div>
